--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
-
+server.port = 9090
 
 #database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/courses
+spring.datasource.username=varad
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#hibernate configuration 
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql=true
+spring.jpa.jpa.properties..hibernate.dialect = org.hibernate.dialect.MySQL80Dialect
