--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port = 9090
+spring.main.allow-circular-references: true
+spring.mvc.dispatch-options-request=true
 
 #database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/courses
